--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ant-design-vue": "^1.3.7",
     "axios": "^0.18.0",
     "enquire.js": "^2.1.6",
+    "mavon-editor": "^2.7.3",
     "mockjs": "^1.0.1-beta3",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.6",
