--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "ant-design-vue": "^1.3.7",
     "axios": "^0.18.0",
     "enquire.js": "^2.1.6",
-    "mavon-editor": "^2.7.3",
     "mockjs": "^1.0.1-beta3",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.6",
+    "vue-ls": "^3.2.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
